[gd_scene load_steps=3 format=3 uid="uid://77dyybbl2koo"]

[ext_resource type="Theme" uid="uid://bfxs2u7huev6o" path="res://Themes/MainMenuTheme.tres" id="1_28flt"]
[ext_resource type="Script" uid="uid://bvy3ljiu3cxvq" path="res://Scripts/main_menu.gd" id="1_48xlc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48xlc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 160.0
offset_right = 640.0
offset_bottom = 360.0
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_28flt")
text = "Play"

[node name="Credits" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_28flt")
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_28flt")
text = "Quit"

[node name="Credits" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.2159017, 0.21590173, 0.2159017, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="Programming" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_28flt")
text = "Programming:"

[node name="Art" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_28flt")
text = "Art:"

[node name="Music & Sound" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_28flt")
text = "Music & Sound:"

[node name="Back" type="Button" parent="Credits"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_28flt")
text = "Back"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_back_pressed"]
